// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectAllEntities should observe entities object: should be an object 1`] = `Object {}`;

exports[`selectAllEntities should observe entities object: should be an object 2`] = `
Object {
  "1": Object {
    "completed": false,
    "id": 1,
    "title": "todo 1",
  },
}
`;

exports[`selectAllEntities should select all: calls: 1 1`] = `Array []`;

exports[`selectAllEntities should select all: calls: 2 1`] = `
Array [
  Object {
    "completed": false,
    "id": 2,
    "title": "todo 2",
  },
]
`;

exports[`selectAllEntities should work with ref: calls: 1 1`] = `Array []`;

exports[`selectAllEntities should work with ref: calls: 2 1`] = `
Array [
  Object {
    "id": 1,
    "open": false,
  },
  Object {
    "id": 2,
    "open": false,
  },
]
`;
